# TrinityCoreDBConnection

./: .gitignore  CMakeLists.txt  README.md
dbimpl/: CMakeLists.txt  DatabaseEnv.cpp  DatabaseEnv.h  DatabaseEnvFwd.h  DatabaseLoader.cpp  DatabaseLoader.h  DatabaseWorkerPool.cpp  Field.cpp  Log.h  MySQLConnection.cpp  MySQLPreparedStatement.cpp  PreparedStatement.cpp  QueryHolder.cpp  QueryResult.cpp  Transaction.cpp
dbimpl/Implementation/: TestDatabase.cpp  TestDatabase.h
example/async/: CMakeLists.txt  main.cpp
example/sync/: CMakeLists.txt  main.cpp  sync
